--- a/srutil/srutil.csproj
+++ b/srutil/srutil.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Duplicate.cs" />
     <Compile Include="Reset.cs" />
+    <Compile Include="Restore.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
